--- a/.envrc
+++ b/.envrc
@@ -1,5 +1,5 @@
 dotenv
 export PATH=`pwd`/bin:$PATH
 export GOBIN=`pwd`/bin
-export GOROOT=`asdf where golang`/go
-export GOPATH=`asdf where golang`/packages
+# export GOROOT=`asdf where golang`/go
+# export GOPATH=`asdf where golang`/packages
