--- a/.envrc
+++ b/.envrc
@@ -3,3 +3,7 @@ export PATH=`pwd`/bin:$PATH
 export GOBIN=`pwd`/bin
 # export GOROOT=`asdf where golang`/go
 # export GOPATH=`asdf where golang`/packages
+export PATH=`pwd`/bin:$PATH
+export GOBIN=`pwd`/bin
+export GOROOT=`$HOME/.local/bin/mise where golang`
+export GOPATH=$HOME/go
